Fixed an overflow/scroll / background issue

--- a/style/screen.scss
+++ b/style/screen.scss
@@ -186,6 +186,12 @@ body {
 	width: 100%;
 	margin: 0;
 	padding: 0;
+		position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	overflow-y: scroll;
 }
 h1,h2,h3,h4 {
 	text-align: center;
